--- a/public/test.html
+++ b/public/test.html
@@ -41,13 +41,12 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.js"></script>
-<script type="text/javascript" src="http://jsgetip.appspot.com"></script>
 
 <script>
     let socket = io('https://test.rhea-so.com');
     socket.emit('chat', {
         nickname: 'system',
-        message: ip() + ' 위치에서 새로운 유저가 접속하였습니다' + '  (' + new Date().toString() + ')'
+        message: '새로운 유저가 접속하였습니다' + '  (' + new Date().toString() + ')'
     });
 
     socket.on('reconnect', function () {
