add: API Document Builder를 사용해보려 노력함.. 근데 할 요소가 별로 없었음

--- a/public/test.html
+++ b/public/test.html
@@ -43,7 +43,7 @@
 <script src="//code.jquery.com/jquery-1.11.1.js"></script>
 
 <script>
-    let socket = io('https://test.rhea-so.com');
+    let socket = io('/');
     socket.emit('chat', {
         nickname: 'system',
         message: '새로운 유저가 접속하였습니다' + '  (' + new Date().toString() + ')'
